--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:cardview-v7:21.0.3'
+//    compile 'com.google.code.gson:gson:2.3.1'
     compile 'se.emilsjolander:stickylistheaders:2.5.2'
     compile 'com.pnikosis:materialish-progress:1.4'
     compile 'com.balysv:material-ripple:1.0.0'
-    compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.balysv.materialmenu:material-menu-toolbar:1.5.1'
 }
