--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".AppContext"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
@@ -22,7 +23,7 @@
             android:value="Channel ID" />
 
         <activity
-            android:name="com.youmu.lotterydrawresult.MainActivity"
+            android:name="com.youmu.lotterydrawresult.WelcomeActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -32,11 +33,21 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.youmu.lotterydrawresult.MainActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
             android:name="com.youmu.lotterydrawresult.LogingActivity"
             android:screenOrientation="portrait"></activity>
         <activity
             android:name="com.youmu.lotterydrawresult.ForecastDetailActivity"
             android:screenOrientation="portrait"></activity>
+
+        <service
+            android:name="com.umeng.update.net.DownloadingService"
+            android:process=":DownloadingService"></service>
+        <activity
+            android:name="com.umeng.update.UpdateDialogActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
     </application>
 
 </manifest>
